--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="color">Color</string>
     <string name="add_a_category">Add a category</string>
     <string name="date">Date:</string>
+    <string name="wednesday_21_june">Wednesday 21 June</string>
 </resources>
